# zendroid

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: android-studio-context.md  roadmap.md  tutorial.md  workflow.md
src/: android.rs  app.rs  cli.rs  config.rs  editor.rs  explorer.rs  gradle.rs  main.rs  problems.rs  process.rs  project.rs  ui.rs
