[package]
name = "zendroid"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A terminal-first Android IDE with a file tree, editor, Gradle tasks, and logs."

[[bin]]
name = "zendroid"
path = "src/main.rs"

[dependencies]
crossterm = "0.29.0"
dirs = "6.0.0"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
